array.island.Island.scala.error
Compilation error:
Island:8: error: not found: value liste2
      liste2 = concat(list,dernier)
      ^